<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/brandName"
        android:layout_width="wrap_content"
        android:text="@string/brand"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>
    
    <TextView
        android:id="@+id/selectionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_product_type"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/brandName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>
    
    <androidx.cardview.widget.CardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectionTv"
        android:layout_marginTop="10dp"
        android:id="@+id/sectionItemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blush"
                android:id="@+id/blush"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/eyebrow"
                android:layout_marginStart="10dp"
                android:text="@string/bronzer"
                android:id="@+id/bronzer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/blush"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toStartOf="@id/foundation"
                android:text="@string/eyebrow"
                android:id="@+id/eyebrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/bronzer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/lipLiner"
                android:text="@string/foundation"
                android:id="@+id/foundation"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/eyebrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/lip_liner"
                android:id="@+id/lipLiner"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/foundation"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nail_polish"
                android:id="@+id/nailPolish"
                app:layout_constraintTop_toBottomOf="@id/blush"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@id/blush"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/lipstick"
                android:id="@+id/lipstick"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toEndOf="@id/nailPolish"
                app:layout_constraintTop_toBottomOf="@id/bronzer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/mascara"
                android:id="@+id/mascara"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toEndOf="@id/lipstick"
                app:layout_constraintTop_toBottomOf="@id/bronzer"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/eyeliner"
                android:id="@+id/Eyeliner"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toEndOf="@id/mascara"
                app:layout_constraintTop_toBottomOf="@id/bronzer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/eyeshadow"
                android:id="@+id/Eyeshadow"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toEndOf="@id/Eyeliner"
                app:layout_constraintTop_toBottomOf="@id/bronzer"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/makeupRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sectionItemContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:overScrollMode="never"
        tools:listitem="@layout/makeup_item"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
